# oiseau

./: .pre-commit-config.yaml  CMakeLists.txt
.github/docker/oiseau-baseline-builder/: Dockerfile
.github/workflows/: cmake.yml
